2003-01-23  Murray Cumming  <murrayc@usa.net>

	* More use of Gdk::Device and Gtk::SelectionData.

2003-01-22  Murray Cumming  <murrayc@usa.net>

	* Used _IGNORE_SIGNAL() on keybinding signals, though gmmproc still
	complains about them. I founds these signals by grepping for
	binding_entry_add_signal in the gtk+ source code.
	* Dealt with various minor TODOs, adding const and using C++ types.

2003-01-22  Murray Cumming  <murrayc@usa.net>

	* Rename GTKMM_ macros to GLIBMM_.

2003-01-22  Murray Cumming  <murrayc@usa.net>

	* build_shared: Used the general/win32/posix variables used in
	the gtkmm Makefile.ams, so that the libraries actually build.
	* gtk/src/treepath.[hg|ccg]: Removed the TreePath(bool) override, as 
	suggested, because it broke the build, because we don't seem to set 
	gtkmm_COMPILATION.
	* gtk/gtkmm/menu_elem.[h|cc]: It used the RefPtr::operator=() that we
	removed because that operator=() shouldn't be used. Faked the behaviour
	with an explict use of the constructor and a reference() for now, with 
	a TODO.

2003-01-21  Murray Cumming  <murrayc@usa.net>

	* Changed library names: 1.4 -> 1.3 and 2.4 -> 2.3 so that they
	can be unstable.

2003-01-21  Murray Cumming  <murrayc@usa.net>

	* Copied and modified slightly the build_shared files from libgdamm,
	to use the gmmproc from glibmm-2.4.

2003-01-21  Murray Cumming  <murrayc@usa.net>

	* Changed library names: 1.0 -> 1.4 and 2.0 -> 2.4

See gtkmm 2.2 for previous ChangeLog entries.