@@ -120,7 +120,7 @@ void PopupEntry::start_editing_vfunc(GdkEvent*)
 
   entry_->select_region(0, -1);
 
-  entry_->signal_activate       ().connect(slot(*this, &Self::on_entry_activate));
+  entry_->signal_activate().connect(slot(*this, &Self::on_entry_activate));
   entry_->signal_key_press_event().connect(slot(*this, &Self::on_entry_key_press_event));
 
   button_->signal_clicked().connect(signal_arrow_clicked_.slot());
