@@ -1,5 +1,9 @@
 2003-01-23  Murray Cumming  <murrayc@usa.net>
 
+	* Updated dnd examples for new signal signatures.
+
+2003-01-23  Murray Cumming  <murrayc@usa.net>
+
 	* More use of Gdk::Device and Gtk::SelectionData.
 
 2003-01-22  Murray Cumming  <murrayc@usa.net>
